--- a/WhereIsThing/app/src/main/AndroidManifest.xml
+++ b/WhereIsThing/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -19,7 +20,8 @@
         <activity android:name=".View.MainActivity" />
         <activity android:name=".View.ModuleListActivity" />
         <activity android:name=".View.NotifyActivity" />
-        <activity android:name=".View.OptionActivity"></activity>
+        <activity android:name=".View.OptionActivity" />
+        <activity android:name=".View.AddActivity"></activity>
     </application>
 
 </manifest>
