--- a/WhereIsThing/app/src/main/AndroidManifest.xml
+++ b/WhereIsThing/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="onetwopunch.capstone.com.whereisthing">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="74e02106090f51b485ad748d2f6fd4ca"/>
+
         <activity android:name=".View.BaseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +31,7 @@
         <activity android:name=".View.ModuleListActivity" />
         <activity android:name=".View.NotifyActivity" />
         <activity android:name=".View.OptionActivity" />
-        <activity android:name=".View.AddActivity"></activity>
+        <activity android:name=".View.AddActivity" />
     </application>
 
 </manifest>
